--- a/index.html
+++ b/index.html
@@ -2,11 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Frauen in der Schweizer Armee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
+
 <body>
-    <h1>Mein IM 5 Projekt</h1>
-    <p>Das ist super</p>
+
+    <header>
+        <div class="Navigation">
+            <div class="left">
+                <img src="img/logo frauen.png" alt="Logo" />
+            </div>
+            
+            <div class="right">
+              <nav>
+                <ul>
+                  <li><a href="#"> Home </a></li>
+                  <li><a href="#"> Thema 1  </a></li>
+                  <li><a href="#"> Thema 2 </a></li>
+                </ul>
+              </nav>
+            </div>
+            
+          </div>
+    </header>
+
+    <main>
+        <div class="wrapper">
+          <div class="flex">
+            <div class="col-30">
+              <img src="img/teamfoto.jpg" alt="Foto Frauen in der Schweizer Armee"/>
+            </div>
+            <div class="col-30">
+  
+            </div>
+            <div class="col-30">
+            </div>
+          </div>
+
+          <div class="flex">
+            <div class="col-30">
+              <h3>Thema XY</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aliquid laborum magni eius? Dolores doloribus, repellat culpa, est voluptate vel, temporibus deleniti repudiandae accusamus dolorem alias corporis, exercitationem nesciunt ipsa fuga neque nobis sapiente!
+              </p>
+            </div>
+
+            <div class="col-30">
+              <h3>Thema XY</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aliquid laborum magni eius? Dolores doloribus, repellat culpa, est voluptate vel, temporibus deleniti repudiandae accusamus dolorem alias corporis, exercitationem nesciunt ipsa fuga neque nobis sapiente!
+              </p>
+            </div>
+
+            <div class="col-30">
+              <h3>Thema XY</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aliquid laborum magni eius? Dolores doloribus, repellat culpa, est voluptate vel, temporibus deleniti repudiandae accusamus dolorem alias corporis, exercitationem nesciunt ipsa fuga neque nobis sapiente!
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </main>
+    <script src="script.js"></script>
 </body>
 </html>
