--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
               <nav>
                 <ul>
                   <li><a href="#"> Home </a></li>
-                  <li><a href="#"> Thema 1  </a></li>
-                  <li><a href="#"> Thema 2 </a></li>
+                  <li><a href="#"> Porträtvideos </a></li>
+                  <li><a href="#"> News </a></li>
+                  <li><a href="#"> Toolbar </a></li>
                 </ul>
               </nav>
             </div>
-            
+
           </div>
     </header>
 
@@ -43,21 +44,21 @@
 
           <div class="flex">
             <div class="col-30">
-              <h3>Thema XY</h3>
+              <h3>Porträtvideos</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aliquid laborum magni eius? Dolores doloribus, repellat culpa, est voluptate vel, temporibus deleniti repudiandae accusamus dolorem alias corporis, exercitationem nesciunt ipsa fuga neque nobis sapiente!
               </p>
             </div>
 
             <div class="col-30">
-              <h3>Thema XY</h3>
+              <h3>News</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aliquid laborum magni eius? Dolores doloribus, repellat culpa, est voluptate vel, temporibus deleniti repudiandae accusamus dolorem alias corporis, exercitationem nesciunt ipsa fuga neque nobis sapiente!
               </p>
             </div>
 
             <div class="col-30">
-              <h3>Thema XY</h3>
+              <h3>Toolbar</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aliquid laborum magni eius? Dolores doloribus, repellat culpa, est voluptate vel, temporibus deleniti repudiandae accusamus dolorem alias corporis, exercitationem nesciunt ipsa fuga neque nobis sapiente!
               </p>
