--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
 
             <div class="col-80">
-              <nav>
-                <ul>
+              <nav class="navigation-ausrichtung">
+                <ul class="navigation-startseite">
                   <li><a href="index.html"> Home </a></li>
                   <li><a href="portraetvideos.html"> Porträtvideos </a></li>
                   <li><a href="news.html"> News </a></li>
@@ -41,9 +41,17 @@
 
         <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/DEOEn0CjDFs?si=MtKbPr5l8xP3-hun" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
         </iframe>-->
-
-        <iframe class="startvideo" width="560" height="315" src="https://www.youtube.com/embed/tOWiRL58b2Y?si=mlf-JRl8OUJXjWcj&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-        </iframe>
+      <div class="wrapper">
+        <div class="fluid-yt">
+          <iframe class="startvideo"
+          src="https://www.youtube.com/embed/tOWiRL58b2Y?si=mlf-JRl8OUJXjWcj&amp;controls=0" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+          </iframe> 
+        </div>
+        </div>
 
         <div class="wrapper">
           <div class="flex">
