--- a/portraetvideos.html
+++ b/portraetvideos.html
@@ -1,2 +1,51 @@
-<p>Auf unserer Website finden Sie inspirierende Porträtvideos von Frauen, die ihren Dienst in der Schweizer Armee leisten. Diese Videos gewähren Ihnen Einblicke in ihre Geschichten, ihre Motivation und ihren Beitrag zur Sicherheit der Schweiz. Die Schweizer Armee bietet Frauen heute gleiche Chancen und Herausforderungen wie Männern. Wir möchten Frauen ermutigen, sich dieser wichtigen Aufgabe anzuschließen. Diese Videos sollen inspirieren und die Wertschätzung für die Arbeit dieser starken Frauen fördern. 
-Erleben Sie die Geschichten dieser Frauen und entdecken Sie die Vielfalt der Rollen, die sie in der Armee einnehmen.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Frauen in der Schweizer Armee</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+</head>
+
+<body>
+
+    <header>
+        <div class="navigation">
+          <div class="wrapper flex">
+
+            <div class="col-20">
+              <img src="img/logo frauen.png" alt="Logo" />
+            </div>
+
+            <div class="col-80">
+              <nav class="navigation-ausrichtung">
+                <ul class="navigation-startseite">
+                  <li><a href="index.html"> Home </a></li>
+                  <li><a href="portraetvideos.html"> Porträtvideos </a></li>
+                  <li><a href="news.html"> News </a></li>
+                  <li><a href="toolbar.html"> Toolbar </a></li>
+                </ul>
+              </nav>
+            </div>
+
+           </div>
+          </div>
+    </header>
+
+    <main>
+    <div class="wrapper">
+      <div class="fluid-yt">
+      <h2>Bewegende Einblicke</h2>
+      <div class="flex">
+    <p>Auf unserer Website finden Sie inspirierende Porträtvideos von Frauen, die ihren Dienst in der Schweizer Armee leisten. Diese Videos gewähren Ihnen Einblicke in ihre Geschichten, ihre Motivation und ihren Beitrag zur Sicherheit der Schweiz. Die Schweizer Armee bietet Frauen heute gleiche Chancen und Herausforderungen wie Männern. Wir möchten Frauen ermutigen, sich dieser wichtigen Aufgabe anzuschließen. Diese Videos sollen inspirieren und die Wertschätzung für die Arbeit dieser starken Frauen fördern. 
+        Erleben Sie die Geschichten dieser Frauen und entdecken Sie die Vielfalt der Rollen, die sie in der Armee einnehmen.</p>
+    </div>
+    </div>
+    </div>
+    </main>
+
+</body>
+
+<script src="/js/script.js"></script>
+</body>
+</html>
