--- a/toolbar.html
+++ b/toolbar.html
@@ -1,2 +1,95 @@
-<h1>Mit nur einem Klick ans Ziel</h1>
-<p>Der zentrale Ort für alles wichtigen Informationen und Hilfestellungen!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Frauen in der Schweizer Armee</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+</head>
+
+<body>
+
+     <header>
+        <div class="navigation">
+          <div class="wrapper flex">
+
+            <div class="col-20">
+              <img src="img/logo frauen.png" alt="Logo" />
+            </div>
+
+            <div class="col-80">
+              <nav class="navigation-ausrichtung">
+                <ul class="navigation-startseite">
+                  <li><a href="index.html"> Home </a></li>
+                  <li><a href="portraetvideos.html"> Porträtvideos </a></li>
+                  <li><a href="news.html"> News </a></li>
+                  <li><a href="toolbar.html"> Toolbar </a></li>
+                </ul>
+              </nav>
+            </div>
+
+           </div>
+          </div>
+    </header>
+
+    <main>
+    <div class="wrapper">
+      <h2>Mit nur einem Klick ans Ziel</h2>
+      
+      <p>Der zentrale Ort für alle wichtigen Informationen und Hilfestellungen!</p>
+      </div>
+
+      <div id="toolcontainer">
+        <article>
+            <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+            <h4>Abzeichen Schweizer Armee</h2>
+        </article>
+
+        <article>
+            <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+            <h4>Bekleidung und Packung</h2>
+        </article>
+
+        <article>
+            <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+            <h4>Zusatzausrüstung</h2>
+        </article>
+
+        <article>
+          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <h4>XY</h2>
+      </article>
+
+      <article>
+        <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+        <h4>XY</h2>
+    </article>
+
+      <article>
+        <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+        <h4>XY</h2>
+    </article>
+
+    <article>
+      <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+      <h4>XY</h2>
+  </article>
+
+  <article>
+    <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+    <h4>XY</h2>
+  </article>
+
+  <article>
+    <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+    <h4>XY</h2>
+  </article>
+
+
+  </main>
+
+</body>
+
+<script src="/js/script.js"></script>
+</body>
+</html>
