--- a/news.html
+++ b/news.html
@@ -1,3 +1,52 @@
-<p>Hier erfahren Sie aus erster Hand von den bemerkenswerten Leistungen, Herausforderungen und Erfahrungen dieser Frauen, die einen wesentlichen Beitrag zur Sicherheit und Verteidigung der Schweiz leisten.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Frauen in der Schweizer Armee</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+</head>
+
+<body>
+
+    <header>
+        <div class="navigation">
+          <div class="wrapper flex">
+
+            <div class="col-20">
+              <img src="img/logo frauen.png" alt="Logo" />
+            </div>
+
+            <div class="col-80">
+              <nav class="navigation-ausrichtung">
+                <ul class="navigation-startseite">
+                  <li><a href="index.html"> Home </a></li>
+                  <li><a href="portraetvideos.html"> Porträtvideos </a></li>
+                  <li><a href="news.html"> News </a></li>
+                  <li><a href="toolbar.html"> Toolbar </a></li>
+                </ul>
+              </nav>
+            </div>
+
+           </div>
+          </div>
+    </header>
+
+    <main>
+    <div class="wrapper">
+      <div class="fluid-yt">
+      <h2>Zentral informiert</h2>      
+      <div class="flex">
+    <p>Hier erfahren Sie aus erster Hand von den bemerkenswerten Leistungen, Herausforderungen und Erfahrungen dieser Frauen, die einen wesentlichen Beitrag zur Sicherheit und Verteidigung der Schweiz leisten.
     Wir möchten nicht nur die Erfolge dieser Frauen feiern, sondern auch ein Bewusstsein für die Chancen schaffen, die sich jungen Frauen in der Armee bieten. Unsere News sollen inspirieren, ermutigen und dazu beitragen, die Anerkennung für den wichtigen Dienst dieser Frauen zu stärken.
-</p>
+    </p>
+    </div>
+    </div>
+    </div>
+  </main>
+  
+</body>
+
+<script src="/js/script.js"></script>
+</body>
+</html>
