--- a/toolbar.html
+++ b/toolbar.html
@@ -34,60 +34,85 @@
 
     <main>
     <div class="wrapper">
-      <h2>Mit nur einem Klick ans Ziel</h2>
+        <h2>Mit nur einem Klick ans Ziel</h2>
       
       <p>Der zentrale Ort für alle wichtigen Informationen und Hilfestellungen!</p>
-      </div>
 
       <div id="toolcontainer">
         <article>
-            <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-            <h4>Abzeichen Schweizer Armee</h2>
-        </article>
-
-        <article>
-            <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-            <h4>Bekleidung und Packung</h2>
-        </article>
-
-        <article>
-            <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-            <h4>Zusatzausrüstung</h2>
-        </article>
-
-        <article>
+          <a href="https://www.vtg.admin.ch/content/vtg-internet/de/die-schweizer-armee/mittel/militaerische-abzeichen/_jcr_content/contentPar/tabs_copy/items/dokumente/tabPar/downloadlist_copy/downloadItems/198_1473692081155.download/5100903dfie-Reglement-Abzeichen-der-Schweizer-Armee.pdf"
+          target="_blank">
           <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-          <h4>XY</h2>
+          <h4 class="texttoolbar">Abzeichen Schweizer Armee</h4>
+          </a>
+        </article>
+
+        <article>
+          <a href="https://www.vtg.admin.ch/content/vtg-internet/de/die-schweizer-armee/mittel/persoenliche-ausruestung/bekleidung-und-packungen/_jcr_content/contentPar/downloadlist_1665626222/downloadItems/62_1484654429776.download/51009d-reglement-bekleidung-und-packungen.pdf"
+          target="_blank">
+          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <h4 class="texttoolbar">Bekleidung und Packung</h4>
+          </a>
+        </article>
+
+        <article>
+          <a href="https://www.vtg.admin.ch/content/vtg-internet/de/die-schweizer-armee/mittel/persoenliche-ausruestung/bekleidung-und-packungen/_jcr_content/contentPar/downloadlist_1665626222/downloadItems/63_1484654486002.download/5100901d-reglement-zusatzausruestung-fuer-das-militaerische-personal.pdff"
+          target="_blank">
+          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <h4 class="texttoolbar">Zusatzausrüstung</h4>
+          </a>
+        </article>
+
+        <article>
+          <a href="https://www.vtg.admin.ch/content/vtg-internet/de/mein-militaerdienst/rs-start/_jcr_content/infotabs/items/49_1609940960888/tabPar/downloadlist/downloadItems/204_1619624512805.download/BREVIER%20-%20Die%20Armee%20in%20K%C3%BCrze.pdf"
+          target="_blank">
+          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <h4 class="texttoolbar">Die Armee in Kürze</h4>
+          </a>
       </article>
 
       <article>
+        <a href="https://www.vtg.admin.ch/de/mein-militaerdienst/rs-start.html"
+        target="_blank">
         <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-        <h4>XY</h2>
-    </article>
+        <h4 class="texttoolbar">Informationen RS</h4>
+        </a>
+      </article>
 
       <article>
+        <a href="https://www.vtg.admin.ch/de/mein-militaerdienst/allgemeines-zum-militaerdienst.html"
+        target="_blank">
         <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-        <h4>XY</h2>
+        <h4 class="texttoolbar">Der Militärdienst</h4>
+        </a>
+      </article>
+
+      <article>
+        <a href="https://www.vtg.admin.ch/de/mein-militaerdienst/aufgebotsdaten.html"
+        target="_blank">
+        <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+        <h4 class="texttoolbar">Angebotsdaten</h4>
+        </a>
+      </article>
+
+    <article>
+      <a href="https://www.miljobs.ch/"
+        target="_blank">
+      <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+      <h4 class="texttoolbar">Funktionen im Militär</h4>
+      </a>
     </article>
 
     <article>
+      <a href="https://www.vtg.admin.ch/de/organisation/kdo-ausb/fiad.html"
+        target="_blank">
       <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-      <h4>XY</h2>
-  </article>
-
-  <article>
-    <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-    <h4>XY</h2>
-  </article>
-
-  <article>
-    <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-    <h4>XY</h2>
-  </article>
-
+      <h4 class="texttoolbar">Fachstelle für Frauen</h4>
+      </a>
+    </article>
+  </div>
 
   </main>
-
 </body>
 
 <script src="/js/script.js"></script>
