--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <title>Frauen in der Schweizer Armee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -14,7 +14,9 @@
           <div class="wrapper flex">
 
             <div class="col-20">
-              <img src="img/logo frauen.png" alt="Logo" />
+              <a href="index.html">
+              <img src="img/logo frauen.png" alt="Logo"/>
+              </a>
             </div>
 
             <div class="col-80">
@@ -29,15 +31,10 @@
             </div>
 
            </div>
-          </div>
+        </div>
     </header>
 
     <main>
-        <!--<div class="wrapper">
-          <div class="flex">
-             <img src="img/teamfoto.jpg" alt="Frauen in der Schweizer Armee" id="hintergrundsbild"/>
-          </div>
-        </div>-->
 
         <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/DEOEn0CjDFs?si=MtKbPr5l8xP3-hun" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
         </iframe>-->
@@ -51,7 +48,7 @@
           allowfullscreen>
           </iframe> 
         </div>
-        </div>
+      </div>
 
         <div class="wrapper">
           <div class="flex">
@@ -89,63 +86,60 @@
           </div>
         </div>
 
-
-
         <!-- Slideshow container -->
             <div class="slideshow-container">
 
-              <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
                 <div class="numbertext">1 / 9</div>
-                <img src="img/appell.jpg" style="width:100%">
+                <img src="img/appell.jpg" alt= "Appell" style="width:100%">
                 <div class="text">Appell</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">2 / 9</div>
-                <img src="img/essen.jpg" style="width:100%">
+                <img src="img/essen.jpg" alt= "essen" style="width:100%">
                 <div class="text">Essen</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">3 / 9</div>
-                <img src="img/führung.jpg" style="width:100%">
+                <img src="img/führung.jpg" alt= "Führung" style="width:100%">
                 <div class="text">Führung</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">4 / 9</div>
-                <img src="img/rede.jpg" style="width:100%">
+                <img src="img/rede.jpg" alt= "Rede" style="width:100%">
                 <div class="text">Rede</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">5 / 9</div>
-                <img src="img/marsch.jpg" style="width:100%">
+                <img src="img/marsch.jpg" alt= "Marsch" style="width:100%">
                 <div class="text">Marsch</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">6 / 9</div>
-                <img src="img/pferd.jpg" style="width:100%">
+                <img src="img/pferd.jpg" alt= "Pferd" style="width:100%">
                 <div class="text">Pferd</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">7 / 9</div>
-                <img src="img/sani.jpg" style="width:100%">
+                <img src="img/sani.jpg" alt= "Sanität" style="width:100%">
                 <div class="text">Sanität</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">8 / 9</div>
-                <img src="img/polizei.jpg" style="width:100%">
+                <img src="img/polizei.jpg" alt= "Polizei" style="width:100%">
                 <div class="text">Polizei</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">9 / 9</div>
-                <img src="img/schuhpflege.jpg" style="width:100%">
+                <img src="img/schuhpflege.jpg" alt= "Schuhpflege" style="width:100%">
                 <div class="text">Schuhpflege</div>
               </div>
 
