--- a/news.html
+++ b/news.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <title>Frauen in der Schweizer Armee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -14,7 +14,9 @@
           <div class="wrapper flex">
 
             <div class="col-20">
-              <img src="img/logo frauen.png" alt="Logo" />
+              <a href="index.html">
+              <img src="img/logo frauen.png" alt="Logo"/>
+              </a>
             </div>
 
             <div class="col-80">
@@ -41,12 +43,16 @@
     Wir möchten nicht nur die Erfolge dieser Frauen feiern, sondern auch ein Bewusstsein für die Chancen schaffen, die sich jungen Frauen in der Armee bieten. Unsere News sollen inspirieren, ermutigen und dazu beitragen, die Anerkennung für den wichtigen Dienst dieser Frauen zu stärken.
     </p>
     
+
+
+
+
     </div>
     </div>
   </main>
   
 </body>
 
-<script src="/js/script.js"></script>
+<script src="/js/scriptapi.js"></script>
 </body>
 </html>
