--- a/portraetvideos.html
+++ b/portraetvideos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <title>Frauen in der Schweizer Armee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -14,7 +14,9 @@
           <div class="wrapper flex">
 
             <div class="col-20">
-              <img src="img/logo frauen.png" alt="Logo" />
+              <a href="index.html">
+              <img src="img/logo frauen.png" alt="Logo"/>
+              </a>
             </div>
 
             <div class="col-80">
@@ -29,16 +31,81 @@
             </div>
 
            </div>
-          </div>
+        </div>
     </header>
 
     <main>
     <div class="wrapper">
       <h2>Bewegende Einblicke</h2>
       <div class="flex">
-    <p>Auf unserer Website finden Sie inspirierende Porträtvideos von Frauen, die ihren Dienst in der Schweizer Armee leisten. Diese Videos gewähren Ihnen Einblicke in ihre Geschichten, ihre Motivation und ihren Beitrag zur Sicherheit der Schweiz. Die Schweizer Armee bietet Frauen heute gleiche Chancen und Herausforderungen wie Männern. Wir möchten Frauen ermutigen, sich dieser wichtigen Aufgabe anzuschließen. Diese Videos sollen inspirieren und die Wertschätzung für die Arbeit dieser starken Frauen fördern. 
-        Erleben Sie die Geschichten dieser Frauen und entdecken Sie die Vielfalt der Rollen, die sie in der Armee einnehmen.</p>
+      <p>Auf unserer Website finden Sie inspirierende Porträtvideos von Frauen, die ihren Dienst in der Schweizer Armee leisten. Diese Videos gewähren Ihnen Einblicke in ihre Geschichten, ihre Motivation und ihren Beitrag zur Sicherheit der Schweiz. Die Schweizer Armee bietet Frauen heute gleiche Chancen und Herausforderungen wie Männern. Wir möchten Frauen ermutigen, sich dieser wichtigen Aufgabe anzuschließen. Diese Videos sollen inspirieren und die Wertschätzung für die Arbeit dieser starken Frauen fördern. 
+         Erleben Sie die Geschichten dieser Frauen und entdecken Sie die Vielfalt der Rollen, die sie in der Armee einnehmen.
+      </p>
     </div>
+
+      <div id="portraetvideoscontainer">
+        
+      <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/UOX7PVEk8Gg?si=uNmlKvRuEivpKS1e" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+      </iframe>
+
+      <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/x0fazT5l8hw?si=hsTPusP131ueBUm7" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+      </iframe>
+
+      <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/j-xVXPYsHds?si=aF61M4MI2dj9Gva2" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+      </iframe>
+
+      <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/u1tqDHkMuys?si=58gSemsbrNBKTy14" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+      </iframe>
+
+      <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/xCJdj4T4wt4?si=MVVVctOT_GVMQUzQ" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+      </iframe>
+
+      <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/cgYrtkkmzPE?si=N8tBAyK1QG2WqQWS" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+      </iframe>
+      </div>
+      
     </div>
     </main>
 
