--- a/toolbar.html
+++ b/toolbar.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <title>Frauen in der Schweizer Armee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -14,7 +14,9 @@
           <div class="wrapper flex">
 
             <div class="col-20">
-              <img src="img/logo frauen.png" alt="Logo" />
+              <a href="index.html">
+              <img src="img/logo frauen.png" alt="Logo"/>
+              </a>
             </div>
 
             <div class="col-80">
