update und style

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="news">
-              <h2>Aktuelle Nachrichten über Frauen in der Schweizer Armee</h2>
+              <h2>Aktuelle Nachrichten zentral gesammelt</h2>
               <p>
                 Die aktuellen Nachrichten und Geschichten widmen sich ganz den Frauen in der Schweizer Armee. Erfahren Sie hier aus erster Hand von ihren Leistungen und Erfahrungen, die zur Sicherheit und Verteidigung der Schweiz beitragen. Entdecken Sie ihre inspirierenden Geschichten und wie sie die Armee bereichern. 
               </p>
@@ -74,7 +74,7 @@
             </div>
 
           <div class="toolbar">
-            <h2>Toolbar</h2>
+            <h2>Die Toolbar</h2>
             <p>
             In der Toolbar sind wichtige Informationen und Hilfestellungen zentral gesammelt. Mit nur einem Klick gelangen Sie direkt auf Ihr gewünschtes Ziel. 
             </p>
