--- a/toolbar.html
+++ b/toolbar.html
@@ -115,6 +115,32 @@
   </div>
 
   </main>
+
+  <footer>
+    <div class="wrapper">
+      <div class="flex">
+        <div class="col-90">
+          <nav>
+            <ul>
+              <li><a href="index.html"> Home </a></li>
+              <li><a href="portraetvideos.html"> Porträtvideos </a></li>
+              <li><a href="news.html"> News </a></li>
+              <li><a href="toolbar.html"> Toolbar </a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col-10">
+          <a href="#start">
+            <img src="img/go-up.png" alt="back to top"/>
+         </a>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>copyright by livia gyger 2023</p>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </body>
