--- a/index.html
+++ b/index.html
@@ -175,8 +175,10 @@
           <div class="col-50">
             <div class="toolbar">
               <h2>Die Toolbar</h2>
+              <br>
+              <br>
               <p>
-              In der Toolbar sind wichtige Informationen und Hilfestellungen zentral gesammelt. Mit nur einem Klick gelangen Sie direkt auf Ihr gewünschtes Ziel. 
+              In der Toolbar sind wichtige Informationen und Hilfestellungen zentral gesammelt. Mit nur einem Klick gelangen Sie direkt auf Ihr gewünschtes Ziel. Dabei sind nicht nur Informationen zur Schweizer Armee abgelegt, sondern man findet auch wichtige Reglemente und Anweisungen.
               </p>
               <button>
                 <a href="toolbar.html">Zur Toolbar</a>
