--- a/news.html
+++ b/news.html
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>copyright by livia gyger 2023</p>
+        <p>© by Livia Gyger 2023</p>
       </div>
     </div>
   </footer>
