--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
           </div>
           <div class="copyright">
-            <p>copyright by livia gyger 2023</p>
+            <p>© by Livia Gyger 2023</p>
           </div>
         </div>
       </footer>
