--- a/toolbar.html
+++ b/toolbar.html
@@ -5,6 +5,8 @@
     <title>Frauen in der Schweizer Armee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="img/Favicon.png">
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
 </head>
 
 <body>
