--- a/toolbar.html
+++ b/toolbar.html
@@ -46,7 +46,7 @@
         <article>
           <a href="https://www.vtg.admin.ch/content/vtg-internet/de/die-schweizer-armee/mittel/militaerische-abzeichen/_jcr_content/contentPar/tabs_copy/items/dokumente/tabPar/downloadlist_copy/downloadItems/198_1473692081155.download/5100903dfie-Reglement-Abzeichen-der-Schweizer-Armee.pdf"
           target="_blank">
-          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <img class= "bilderintoolbar" src="img/abzeichen.png" alt="Abzeichen der Schweizer Armee">
           <h4 class="texttoolbar">Abzeichen Schweizer Armee</h4>
           </a>
         </article>
@@ -54,7 +54,7 @@
         <article>
           <a href="https://www.vtg.admin.ch/content/vtg-internet/de/die-schweizer-armee/mittel/persoenliche-ausruestung/bekleidung-und-packungen/_jcr_content/contentPar/downloadlist_1665626222/downloadItems/62_1484654429776.download/51009d-reglement-bekleidung-und-packungen.pdf"
           target="_blank">
-          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <img class= "bilderintoolbar" src="img/bekleidung.png" alt="Bekleidung und Packung">
           <h4 class="texttoolbar">Bekleidung und Packung</h4>
           </a>
         </article>
@@ -62,7 +62,7 @@
         <article>
           <a href="https://www.vtg.admin.ch/content/vtg-internet/de/die-schweizer-armee/mittel/persoenliche-ausruestung/bekleidung-und-packungen/_jcr_content/contentPar/downloadlist_1665626222/downloadItems/63_1484654486002.download/5100901d-reglement-zusatzausruestung-fuer-das-militaerische-personal.pdff"
           target="_blank">
-          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Zusatzausrüstung">
           <h4 class="texttoolbar">Zusatzausrüstung</h4>
           </a>
         </article>
@@ -70,7 +70,7 @@
         <article>
           <a href="https://www.vtg.admin.ch/content/vtg-internet/de/mein-militaerdienst/rs-start/_jcr_content/infotabs/items/49_1609940960888/tabPar/downloadlist/downloadItems/204_1619624512805.download/BREVIER%20-%20Die%20Armee%20in%20K%C3%BCrze.pdf"
           target="_blank">
-          <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+          <img class= "bilderintoolbar" src="img/armeeinkuerze.png" alt="Die Armee in Kürze">
           <h4 class="texttoolbar">Die Armee in Kürze</h4>
           </a>
       </article>
@@ -78,7 +78,7 @@
       <article>
         <a href="https://www.vtg.admin.ch/de/mein-militaerdienst/rs-start.html"
         target="_blank">
-        <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+        <img class= "bilderintoolbar" src="img/informationen.png" alt="Informationen Rekrutenschule">
         <h4 class="texttoolbar">Informationen RS</h4>
         </a>
       </article>
@@ -86,7 +86,7 @@
       <article>
         <a href="https://www.vtg.admin.ch/de/mein-militaerdienst/allgemeines-zum-militaerdienst.html"
         target="_blank">
-        <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+        <img class= "bilderintoolbar" src="img/mildienst.png" alt="Militärdienst">
         <h4 class="texttoolbar">Der Militärdienst</h4>
         </a>
       </article>
@@ -94,15 +94,15 @@
       <article>
         <a href="https://www.vtg.admin.ch/de/mein-militaerdienst/aufgebotsdaten.html"
         target="_blank">
-        <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
-        <h4 class="texttoolbar">Angebotsdaten</h4>
+        <img class= "bilderintoolbar" src="img/aufgebotsdaten.png" alt="Aufgebotsdaten">
+        <h4 class="texttoolbar">Aufgebotsdaten</h4>
         </a>
       </article>
 
     <article>
       <a href="https://www.miljobs.ch/"
         target="_blank">
-      <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+      <img class= "bilderintoolbar" src="img/funktionen.png" alt="Funktionen im Militär">
       <h4 class="texttoolbar">Funktionen im Militär</h4>
       </a>
     </article>
@@ -110,7 +110,7 @@
     <article>
       <a href="https://www.vtg.admin.ch/de/organisation/kdo-ausb/fiad.html"
         target="_blank">
-      <img class= "bilderintoolbar" src="img/toolweiss.png" alt="Werkzeug">
+      <img class= "bilderintoolbar" src="img/fachstelle.png" alt="Fachstelle für Frauen">
       <h4 class="texttoolbar">Fachstelle für Frauen</h4>
       </a>
     </article>
