--- a/news.html
+++ b/news.html
@@ -11,8 +11,8 @@
 <body>
 
     <header>
-        <div class="navigation">
-          <div class="wrapper flex">
+      <div class="navigation" id="start">
+        <div class="wrapper flex">
 
             <div class="col-20">
               <a href="index.html">
