--- a/index.html
+++ b/index.html
@@ -283,11 +283,12 @@
 
 
     <!--Service-Worker registrieren --> 
-    <script> if (typeof navigator.serviceWorker !== 'undefined') { 
+    <script> 
+    if (typeof navigator.serviceWorker !== 'undefined') { 
     navigator.serviceWorker.register('pwabuilder-sw.js') 
     } 
     </script>
     
-    <script src="/js/script.js"></script>
+    <script src="/armee/js/script.js"></script>
 </body>
 </html>
