--- a/toolbar.html
+++ b/toolbar.html
@@ -31,8 +31,17 @@
                 </ul>
               </nav>
             </div>
-
            </div>
+           <label>
+            <input type="checkbox">
+            <span class="menu"> <span class="hamburger"></span> </span>
+            <ul>
+              <li><a href="index.html"> Home </a></li>
+                  <li><a href="portraetvideos.html"> Porträtvideos </a></li>
+                  <li><a href="news.html"> News </a></li>
+                  <li><a href="toolbar.html"> Toolbar </a></li>
+            </ul>
+          </label>
           </div>
     </header>
 
